--- a/Web-Scrapping.ipynb
+++ b/Web-Scrapping.ipynb
@@ -551,7 +551,7 @@
     "                elif len(d11) == 0:\n",
     "                    sounding_data[\"HGHT[m]\"].append(np.nan)\n",
     "        mydf = pd.DataFrame(sounding_data)\n",
-    "        mydf.to_csv(\"data/\"+file_name)\n",
+    "        mydf.to_csv(file_name)\n",
     "    except:\n",
     "        if test_website[-3] == \"=\":\n",
     "            print(test_website[-2:])\n",
