--- a/Web-Scrapping.ipynb
+++ b/Web-Scrapping.ipynb
@@ -7,16 +7,17 @@
     "<h1 style=\"text-align: center; color: #086A87;\">Web Scrapping Python Script</h1>\n",
     "<h3 style=\"text-align: center; color: #086A87;\">By: McKenzie Kulseth</h3><br><br>\n",
     "<h4 style=\"color: #086A87;margin:0;\">Purpose of this code:</h4>\n",
-    "<p style=\"color: #086A87; margin:0;\">This code will parse a webpage for data and extract that data.</p>"
+    "<p style=\"color: #086A87; margin:0;\">This code will parse a webpage for data and extract that data. \n",
+    "    <br><br><em>NOTE: One should orgainze the csv files being save into a directory tree to better organize the files.</p>\n",
+    "<p style=\"color: #086A87;\"><br><strong>1.) Import Libraries</p>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries\n",
     "import requests as req\n",
     "import lxml\n",
     "from bs4 import BeautifulSoup\n",
@@ -26,30 +27,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create a variable holding the name(s) of web-page(s)\n",
-    "websites = [\"http://www.weathergraphics.com/identifiers/master-station.dat\"]"
+    "<p style=\"color: #086A87;margin: 0;\"> <br> <strong>2.) Get the station ids for the sounding stations from a website</strong>\n",
+    "<ul style=\"color: #086A87;margin: 0;\"><li> Initialize list to ensure no station id is repeated in the list\n",
+    "    <li> Loop through the website in the list of websites\n",
+    "    <li> Use BeautifulSoup to parse the webpage for the station ids without the 'k' in front front\n",
+    "    <li> Append those ids to the list of station ids</ul>\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!, There are 2779 stations in North America.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get the station ids\n",
+    "websites = [\"http://www.weathergraphics.com/identifiers/master-station.dat\"]\n",
     "station_ids = []\n",
     "for ws in websites:\n",
     "    source = req.get(ws).text\n",
@@ -70,20 +65,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done creating years, months, and days to loop through for getting data.\n"
-     ]
-    }
-   ],
    "source": [
-    "# Set variables to loop through dates\n",
+    "<p style=\"color: #086A87;margin: 0;\"> <br><strong>3.) Creating lists to hold the dates to be looped through to find sounding data.</strong>\n",
+    "<br> <ul style=\"color: #086A87;margin: 0;\"><li> Get today's date to get the ending year for sounding data to search for\n",
+    "    <li> Create lists of years, months, and days to search for sounding data\n",
+    "</ul></p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "today = date.today()\n",
     "this_year = int(today.strftime(\"%Y\"))\n",
     "years = np.arange(1973,this_year+1)\n",
@@ -96,20 +92,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done. There are 49621824 to sift through.\n"
-     ]
-    }
-   ],
    "source": [
-    "# Storing all of the websites in a list to be looped through to save sounding data.\n",
+    "<p style=\"color: #086A87;\"><br><strong>4.) Loop through those dates and station ids to create a list of website to be parsed for sounding data</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "web_sites = []\n",
     "for y in years:\n",
     "    for m in months:\n",
@@ -122,364 +116,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color: #086A87;margin: 0;\"><br><strong> 5.) Get sounding data from websites</strong>\n",
+    "<ul style=\"color: #086A87;margin: 0;\"><li> Loop through websites\n",
+    "    <li> Store sounding data in dictionary\n",
+    "    <li> Create a panadas dataframe to store the dictionary\n",
+    "    <li> Save the dataframe as a csv file\n",
+    "</ul>\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LG\n",
-      "55\n",
-      "VD\n",
-      "A0\n",
-      "1A\n",
-      "ET\n",
-      "LX\n",
-      "9J\n",
-      "NB\n",
-      "UO\n",
-      "UB\n",
-      "HM\n",
-      "MX\n",
-      "KL\n",
-      "A1\n",
-      "CU\n",
-      "HN\n",
-      "9J\n",
-      "ZH\n",
-      "J4\n",
-      "A9\n",
-      "OX\n",
-      "AD\n",
-      "KA\n",
-      "DQ\n",
-      "FM\n",
-      "R1\n",
-      "OB\n",
-      "GM\n",
-      "XF\n",
-      "XX\n",
-      "SL\n",
-      "ZR\n",
-      "EY\n",
-      "AM\n",
-      "R0\n",
-      "UA\n",
-      "XS\n",
-      "EM\n",
-      "OI\n",
-      "CL\n",
-      "VX\n",
-      "00\n",
-      "BT\n",
-      "KA\n",
-      "YH\n",
-      "DH\n",
-      "90\n",
-      "EQ\n",
-      "LD\n",
-      "YV\n",
-      "NA\n",
-      "LP\n",
-      "CU\n",
-      "SM\n",
-      "RO\n",
-      "OT\n",
-      "BR\n",
-      "RF\n",
-      "IT\n",
-      "39\n",
-      "EZ\n",
-      "76\n",
-      "LQ\n",
-      "PK\n",
-      "WT\n",
-      "19\n",
-      "ZK\n",
-      "BF\n",
-      "OG\n",
-      "06\n",
-      "UE\n",
-      "RC\n",
-      "LG\n",
-      "RX\n",
-      "SG\n",
-      "GT\n",
-      "XK\n",
-      "RG\n",
-      "WM\n",
-      "01\n",
-      "06\n",
-      "FP\n",
-      "HD\n",
-      "ZC\n",
-      "UG\n",
-      "LG\n",
-      "SX\n",
-      "HU\n",
-      "BN\n",
-      "63\n",
-      "EU\n",
-      "YR\n",
-      "CN\n",
-      "V7\n",
-      "V7\n",
-      "GM\n",
-      "HU\n",
-      "65\n",
-      "FZ\n",
-      "3A\n",
-      "LS\n",
-      "GA\n",
-      "E4\n",
-      "JB\n",
-      "VT\n",
-      "UF\n",
-      "HX\n",
-      "RC\n",
-      "74\n",
-      "AD\n",
-      "DL\n",
-      "EZ\n",
-      "03\n",
-      "OW\n",
-      "JN\n",
-      "MX\n",
-      "0G\n",
-      "33\n",
-      "34\n",
-      "QE\n",
-      "UM\n",
-      "UX\n",
-      "YL\n",
-      "Y7\n",
-      "11\n",
-      "00\n",
-      "AT\n",
-      "MQ\n",
-      "46\n",
-      "PV\n",
-      "CV\n",
-      "UN\n",
-      "VX\n",
-      "NG\n",
-      "AB\n",
-      "BX\n",
-      "UO\n",
-      "YS\n",
-      "35\n",
-      "IH\n",
-      "LU\n",
-      "4Q\n",
-      "LH\n",
-      "2Q\n",
-      "UR\n",
-      "14\n",
-      "XL\n",
-      "YL\n",
-      "SL\n",
-      "ZZ\n",
-      "RQ\n",
-      "4Q\n",
-      "IC\n",
-      "CR\n",
-      "EC\n",
-      "JO\n",
-      "RC\n",
-      "CB\n",
-      "AG\n",
-      "L0\n",
-      "2Q\n",
-      "DW\n",
-      "YX\n",
-      "L2\n",
-      "98\n",
-      "JK\n",
-      "ZJ\n",
-      "KA\n",
-      "HX\n",
-      "UU\n",
-      "0Q\n",
-      "64\n",
-      "AT\n",
-      "CH\n",
-      "UL\n",
-      "GB\n",
-      "RF\n",
-      "18\n",
-      "JO\n",
-      "HR\n",
-      "WD\n",
-      "L7\n",
-      "GT\n",
-      "L9\n",
-      "H1\n",
-      "RS\n",
-      "PL\n",
-      "YK\n",
-      "OC\n",
-      "JF\n",
-      "LC\n",
-      "VK\n",
-      "PC\n",
-      "L8\n",
-      "GB\n",
-      "LI\n",
-      "06\n",
-      "QT\n",
-      "AX\n",
-      "HP\n",
-      "AE\n",
-      "55\n",
-      "MH\n",
-      "L6\n",
-      "YV\n",
-      "ER\n",
-      "CE\n",
-      "58\n",
-      "OD\n",
-      "HV\n",
-      "HV\n",
-      "O5\n",
-      "IY\n",
-      "SU\n",
-      "RY\n",
-      "HS\n",
-      "WS\n",
-      "PC\n",
-      "ED\n",
-      "A6\n",
-      "L3\n",
-      "KL\n",
-      "FG\n",
-      "34\n",
-      "32\n",
-      "KB\n",
-      "KH\n",
-      "VE\n",
-      "XR\n",
-      "79\n",
-      "SP\n",
-      "MD\n",
-      "AO\n",
-      "RB\n",
-      "ES\n",
-      "3Q\n",
-      "3Q\n",
-      "9Q\n",
-      "96\n",
-      "1Q\n",
-      "4Q\n",
-      "72\n",
-      "13\n",
-      "TD\n",
-      "7Q\n",
-      "5Q\n",
-      "7Q\n",
-      "NZ\n",
-      "97\n",
-      "9Q\n",
-      "TV\n",
-      "49\n",
-      "39\n",
-      "IU\n",
-      "BL\n",
-      "DD\n",
-      "8Q\n",
-      "IO\n",
-      "WC\n",
-      "IV\n",
-      "AC\n",
-      "HR\n",
-      "CC\n",
-      "MF\n",
-      "AX\n",
-      "NS\n",
-      "8Q\n",
-      "BD\n",
-      "QL\n",
-      "10\n",
-      "UC\n",
-      "UC\n",
-      "DM\n",
-      "KX\n",
-      "GX\n",
-      "OX\n",
-      "EE\n",
-      "AN\n",
-      "YF\n",
-      "ZY\n",
-      "UX\n",
-      "FO\n",
-      "1Q\n",
-      "NX\n",
-      "JC\n",
-      "HV\n",
-      "BP\n",
-      "SI\n",
-      "DB\n",
-      "NA\n",
-      "44\n",
-      "BA\n",
-      "27\n",
-      "XC\n",
-      "5Q\n",
-      "ZN\n",
-      "MX\n",
-      "MO\n",
-      "L2\n",
-      "ZP\n",
-      "TS\n",
-      "ZA\n",
-      "21\n",
-      "87\n",
-      "L7\n",
-      "VL\n",
-      "6Q\n",
-      "CK\n",
-      "SU\n",
-      "VE\n",
-      "67\n",
-      "82\n",
-      "RM\n",
-      "OA\n",
-      "O6\n",
-      "6Q\n",
-      "RK\n",
-      "XP\n",
-      "KI\n",
-      "45\n",
-      "CB\n",
-      "BG\n",
-      "BX\n",
-      "VW\n",
-      "43\n",
-      "CV\n",
-      "IS\n",
-      "VI\n",
-      "54\n",
-      "L3\n",
-      "FF\n",
-      "KO\n",
-      "LS\n",
-      "V9\n",
-      "SE\n",
-      "JC\n",
-      "C0\n",
-      "TR\n",
-      "OS\n",
-      "EF\n",
-      "RV\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get sounding data and save that data in files\n",
-    "test_website_1=\"http://weather.uwyo.edu/cgi-bin/sounding?region=naconf&TYPE=TEXT%3ALIST&YEAR=2020&MONTH=11&FROM=0512&TO=0512&STNM=INL\"\n",
-    "for test_website1 in web_sites:\n",
-    "    test_website = test_website1\n",
+    "counting_ids_w_no_data = 0; websites_with_no_sounding_data = []\n",
+    "websites_no_data = {}\n",
+    "for ws in web_sites[0:3]:\n",
     "    sounding_data = {\"PRES[hPa]\":[], \"HGHT[m]\":[], \"TEMP[C]\":[], \"DWPT[C]\":[], \"RELH[%]\":[],\n",
     "                     \"MIXR[g/kg]\":[], \"DRCT[deg]\":[], \"SKNT[knot]\":[], \"THTA[K]\":[],\n",
     "                     \"THTE[K]\":[], \"THTV[K]\":[]}\n",
@@ -488,14 +145,14 @@
     "    headers = []\n",
     "    units = []\n",
     "    try:\n",
-    "        source = req.get(test_website).text\n",
+    "        source = req.get(ws).text\n",
     "        soup = BeautifulSoup(source,\"html.parser\")\n",
     "        data = soup.find(\"pre\").text\n",
     "        data1 = data.split(\"\\n\")\n",
-    "        if test_website[-3] != \"=\":\n",
-    "            file_name = \"K\"+test_website[-3:]+\"_\"+test_website[-40:-36]+\"_\"+test_website[-29:-27]+\"_\"+test_website[-13:-11]+\"_sounding_data.csv\"\n",
+    "        if ws[-3] != \"=\":\n",
+    "            file_name = \"K\"+ws[-3:]+\"_\"+ws[-40:-36]+\"_\"+ws[-29:-27]+\"_\"+ws[-13:-11]+\"_sounding_data.csv\"\n",
     "        else:\n",
-    "            file_name = \"K\"+test_website[-2:]+\"_\"+test_website[-39:-35]+\"_\"+test_website[-28:-26]+\"_\"+test_website[-12:-10]+\"_sounding_data.csv\"\n",
+    "            file_name = \"K\"+ws[-2:]+\"_\"+ws[-39:-35]+\"_\"+ws[-28:-26]+\"_\"+ws[-12:-10]+\"_sounding_data.csv\"\n",
     "        headers = data1[2]\n",
     "        units = data1[3]\n",
     "        if headers != []:\n",
@@ -551,13 +208,30 @@
     "                elif len(d11) == 0:\n",
     "                    sounding_data[\"HGHT[m]\"].append(np.nan)\n",
     "        mydf = pd.DataFrame(sounding_data)\n",
-    "        mydf.to_csv(file_name)\n",
+    "        mydf.to_csv(\"data/\"+file_name)\n",
     "    except:\n",
-    "        if test_website[-3] == \"=\":\n",
-    "            print(test_website[-2:])\n",
+    "        if ws[-3] != \"=\":\n",
+    "            if ws[-3] not in websites_with_no_sounding_data:\n",
+    "                websites_with_no_sounding_data.append(ws[-3:])\n",
+    "                websites_no_data.update({\"K\"+ws[-3:]:[]})                \n",
+    "            websites_no_data[\"K\"+ws[-3:]].append(ws[-29:-27]+\"/\"+ws[-13:-11]+\"/\"+ws[-40:-36])\n",
+    "            file_name = \"K\"+ws[-3:]+\"_\"+ws[-40:-36]+\"_\"+ws[-29:-27]+\"_\"+ws[-13:-11]+\"_sounding_data.csv\"\n",
     "        else:\n",
-    "            print(test_website[-3:])\n",
-    "\n"
+    "            if ws[-2] not in websites_with_no_sounding_data:\n",
+    "                websites_with_no_sounding_data.append(ws[-2:])\n",
+    "                websites_no_data.update({\"K\"+ws[-2:]:[]})                \n",
+    "            websites_no_data[\"K\"+ws[-2:]].append(ws[-28:-26]+\"/\"+ws[-12:-10]+\"/\"+ws[-39:-35])\n",
+    "            file_name = \"K\"+ws[-2:]+\"_\"+ws[-39:-35]+\"_\"+ws[-28:-26]+\"_\"+ws[-12:-10]+\"_sounding_data.csv\"\n",
+    "        counting_ids_w_no_data += 1\n",
+    "\n",
+    "print(str(counting_ids_w_no_data)+\" of the \"+str(len(web_sites))+\" websites had no sounding information.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color: #086A87;\"><strong>6.) View the station ids and the dates they had know sounding data</strong></p>"
    ]
   },
   {
@@ -565,7 +239,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Station_ID\\tDates\")\n",
+    "for key in websites_no_data.keys():\n",
+    "    print(key+\"\\t\\t\",end=\"\")\n",
+    "    for d in websites_no_data[key]:\n",
+    "        if d != websites_no_data[key][-1]:\n",
+    "            print(d,end=\", \")\n",
+    "        else:\n",
+    "            print(d+\".\")\n"
+   ]
   }
  ],
  "metadata": {
